# haskell-Finance.Quote.Yahoo

./: Finance-Quote-Yahoo.cabal  LICENSE  README  quotes.hs
Finance/Quote/: Yahoo.hs
