Name:                Finance-Quote-Yahoo
Version:             0.8.0
Description:         Obtain quote data from finance.yahoo.com
Synopsis:	     Obtain quote data from finance.yahoo.com
Category:            Web
Stability:           experimental
Homepage:            http://www.b7j0c.org/stuff/haskell-yquote.xhtml
License:             BSD3
License-file:        LICENSE
Author:              brad clawsie
Maintainer:          haskell@fastmail.fm
cabal-version: 	     >=1.6
build-type:          Simple

Library 
  Build-Depends:
    base >= 3 && < 5,
    bytestring >= 0.10 && < 0.11,
    containers >= 0.5 && < 0.6,
    http-conduit >= 2.1 && < 2.2,
    network >= 2.6 && < 2.7,
    network-uri >= 2.6 && < 2.7,
    time >= 1.4 && < 1.5,
    old-locale >= 1.0 && < 1.1

  Exposed-modules:     Finance.Quote.Yahoo

source-repository this
  type:             git
  location:         https://github.com/bradclawsie/haskell-Finance.Quote.Yahoo
  tag:              0.8
